<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary_round_all_30_inset_20"
    android:orientation="vertical"
    android:padding="35dp">

    <TextView
        android:id="@+id/alert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:text="@string/thanks_for_complete_route_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="?colorOnPrimary"/>

    <TextView
        android:id="@+id/alert_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/thanks_for_complete_route_body"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="#C8C8C8"
        />

    <Button
        android:id="@+id/alert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="?colorSecondary"
        android:text="@string/continue_text"
        android:textColor="?colorOnSecondary"/>

</LinearLayout>