<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary_round_up_10"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:gravity="bottom|center_horizontal"
        android:text="—"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:text="@string/give_location_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="?colorOnPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/give_location_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#C8C8C8"
        />

    <Button
        android:id="@+id/go_to_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="?colorSecondary"
        android:text="@string/action_settings"
        android:textColor="?colorOnSecondary"/>

</LinearLayout>