<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MapFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/map_tools_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end">

        <ImageButton
            android:id="@+id/zoom_in_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:foreground="@drawable/button_add"
            android:background="@drawable/background_on_primary_round_all_30_inset_10" />

        <ImageButton
            android:id="@+id/zoom_out_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:foreground="@drawable/button_indeterminate"
            android:background="@drawable/background_on_primary_round_all_30_inset_10" />

        <ImageButton
            android:id="@+id/zoom_location_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:foreground="@drawable/button_nav"
            android:background="@drawable/background_on_primary_round_all_30_inset_10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/downContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/type_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_primary_round_all_10"
                    android:layout_marginHorizontal="5dp"
                    app:tabMode="fixed"
                    app:tabGravity="start"
                    app:tabIndicatorGravity="stretch"
                    app:tabTextColor="?colorOnPrimary"
                    app:tabSelectedTextColor="?colorOnPrimary"
                    app:tabIndicatorAnimationMode="elastic"
                    app:tabIndicatorAnimationDuration="@integer/material_motion_duration_long_1"
                    app:tabIndicatorColor="?colorPrimaryVariant"
                    app:tabIndicator="@drawable/background_primary_variant_round_all_5_inset_5">
<!--TODO-->
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_routes_places" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/routes" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/places" />

                </com.google.android.material.tabs.TabLayout>

                <CheckBox
                    android:id="@+id/not_completed_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:theme="@style/DarkCheckBox"
                    android:background="@drawable/background_primary_round_all_10"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:textSize="16sp"
                    android:textColor="?colorOnPrimary"
                    android:text="@string/not_competed_objects"/>

            </LinearLayout>


        </HorizontalScrollView>

    </LinearLayout>

    <include
        android:id="@+id/bottom_sheet_main"
        layout="@layout/bottom_sheet_groups_list"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>